<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jugistanbul</groupId>
    <artifactId>scoped-values</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>scoped-values</name>
    <url>https://github.com/hakdogan/scoped-values</url>

    <developers>
        <developer>
            <name>Huseyin Akdogan</name>
            <email>hakdogan75@gmail.com</email>
            <organization>JUG Istanbul</organization>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>20</source>
                    <target>20</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-source</arg>
                        <arg>20</arg>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.concurrent</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>